--- a/src/components/Request/Request.css
+++ b/src/components/Request/Request.css
@@ -1,7 +1,78 @@
 .request {
   display: flex;
-  justify-content: space-between;
   margin: 0;
-  padding: 29px 88px 0;
+  padding: 29px 0 0 88px;
+  flex-direction: column;
+  max-width: 624px;
+  width: 100%;
 }
 
+.request__heading-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.request__button-group {
+  display: flex;
+  column-gap: 21px;
+  margin: 20px 6px;
+  padding: 0;
+}
+
+.request__button {
+  color: #EB7800;
+  text-align: center;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 800;
+  border: none;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.request__message {
+  color: rgba(0, 0, 0, 0.80);
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  margin: 0;
+  padding: 12px 0px;
+}
+
+.request__file-list {
+  border-radius: 12px;
+  border: 1px solid #DDDFE0;
+  padding: 0;
+  margin: 0;
+}
+
+.request__file {
+  list-style: none;
+  display: flex;
+  padding: 8px;
+  margin: 0;
+  column-gap: 12px;
+  align-items: center;
+  border-bottom: 1px solid #DDDFE0;
+}
+
+.request__file:last-child {
+  border-bottom: none;
+}
+
+.request__file-icon {
+  height: 24px;
+  width: 24px;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
+
+.request__file-title {
+  color: rgba(0, 0, 0, 0.80);
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+}
